[gd_scene load_steps=9 format=3 uid="uid://dfy6y7ouve25a"]

[ext_resource type="Script" path="res://world/Level.gd" id="1_hyc5s"]
[ext_resource type="PackedScene" uid="uid://btfasgma1a3sm" path="res://entities/player/player.tscn" id="1_wm5k2"]
[ext_resource type="PackedScene" uid="uid://0f36gjl0ea28" path="res://world/terrain/tile_map.tscn" id="2_0iiwb"]
[ext_resource type="PackedScene" uid="uid://oretaw7o7q10" path="res://world/box/box.tscn" id="3_7ehay"]
[ext_resource type="Texture2D" uid="uid://cse7bhfty45vx" path="res://assets/box/selected_space.png" id="5_0qfvy"]
[ext_resource type="PackedScene" uid="uid://dmp6wdd0ungw8" path="res://world/object/exit_object.tscn" id="6_6vmr4"]
[ext_resource type="PackedScene" uid="uid://blmm1kvb1wbp4" path="res://world/object/wand_pick_up.tscn" id="7_m8xqm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hw10c"]
size = Vector2(28, 28)

[node name="TestLevel" type="Node2D"]
script = ExtResource("1_hyc5s")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Player" parent="." instance=ExtResource("1_wm5k2")]
position = Vector2(-172, 136)
move_speed = 130.0
accel = 65.0
gravity = 20.0

[node name="TileMap" parent="." instance=ExtResource("2_0iiwb")]
layer_0/tile_data = PackedInt32Array(-327691, 262146, 1, -262155, 262146, 1, -196619, 262146, 1, -131083, 262146, 1, -65547, 262146, 1, -11, 262146, 1, 65525, 262146, 1, 131061, 262146, 1, 196597, 262146, 1, 262133, 262146, 1, 327669, 262146, 1, 393205, 262146, 1, 458741, 262146, 1, -327690, 131074, 0, -262154, 131074, 0, -196618, 131074, 0, -131082, 131074, 0, -65546, 131074, 0, -10, 131074, 0, 65526, 131074, 0, 131062, 131074, 0, 196598, 131074, 0, 262134, 131074, 0, 327670, 131074, 0, 393206, 196610, 0, 458742, 262146, 1, -393210, 131074, 268435456, -393209, 262146, 1, -393208, 262146, 1, -393207, 262146, 1, -393206, 262146, 1, -327671, 262146, 1, -262135, 262146, 1, -196599, 262146, 1, -131063, 262146, 1, -65527, 262146, 1, 9, 262146, 1, 65545, 262146, 1, 131081, 262146, 1, 196617, 262146, 1, 262153, 262146, 1, 327689, 262146, 1, 393225, 262146, 1, -327670, 262146, 1, -262134, 262146, 1, -196598, 262146, 1, -131062, 262146, 1, -65526, 262146, 1, 10, 262146, 1, 65546, 262146, 1, 131082, 262146, 1, 196618, 262146, 1, 262154, 262146, 1, 327690, 262146, 1, 393226, 262146, 1, 393207, 65538, 0, 458743, 262146, 1, 393208, 65538, 0, 458744, 262146, 1, 393209, 65538, 0, 458745, 262146, 1, 393210, 65538, 0, 458746, 262146, 1, 393211, 65538, 0, 458747, 262146, 1, 393212, 65538, 0, 458748, 262146, 1, 458749, 262146, 1, 458750, 262146, 1, 458751, 262146, 1, 327680, 65538, 0, 393216, 262146, 1, 327681, 65538, 0, 393217, 262146, 1, 327682, 65538, 0, 393218, 262146, 1, 327683, 65538, 0, 393219, 262146, 1, 327684, 196610, 268435456, 393220, 262146, 1, 327685, 262146, 1, 393221, 262146, 1, 327686, 262146, 1, 393222, 262146, 1, 327687, 262146, 1, 393223, 262146, 1, 327688, 262146, 1, 393224, 262146, 1, 524276, 262146, 1, 524277, 262146, 1, 524278, 262146, 1, 524279, 262146, 1, 524280, 262146, 1, 524281, 262146, 1, 589811, 262146, 1, 589812, 262146, 1, 589813, 262146, 1, 589814, 262146, 1, 589815, 262146, 1, 589816, 262146, 1, 589817, 262146, 1, 589818, 262146, 1, 589819, 262146, 1, 589820, 262146, 1, 589821, 262146, 1, 589822, 262146, 1, 589823, 262146, 1, 524288, 262146, 1, 524289, 262146, 1, 524290, 262146, 1, 524291, 262146, 1, 524292, 262146, 1, 524293, 262146, 1, 524294, 262146, 1, 524295, 262146, 1, 524296, 262146, 1, 524297, 262146, 1, 524298, 262146, 1, 524282, 262146, 1, 524283, 262146, 1, 524284, 262146, 1, 524285, 262146, 1, 524286, 262146, 1, 524287, 262146, 1, 458752, 262146, 1, 458753, 262146, 1, 458754, 262146, 1, 458755, 262146, 1, 458756, 262146, 1, 458757, 262146, 1, 458758, 262146, 1, 458759, 262146, 1, 458760, 262146, 1, 458761, 262146, 1, 458762, 262146, 1, -327694, 262146, 1, -262158, 262146, 1, -196622, 262146, 1, -131086, 262146, 1, -65550, 262146, 1, -14, 262146, 1, 65522, 262146, 1, 131058, 262146, 1, 196594, 262146, 1, 262130, 262146, 1, 327666, 262146, 1, 393202, 262146, 1, 458738, 262146, 1, 524274, 262146, 1, 589810, 262146, 1, -327693, 262146, 1, -262157, 262146, 1, -196621, 262146, 1, -131085, 262146, 1, -65549, 262146, 1, -13, 262146, 1, 65523, 262146, 1, 131059, 262146, 1, 196595, 262146, 1, 262131, 262146, 1, 327667, 262146, 1, 393203, 262146, 1, 458739, 262146, 1, 524275, 262146, 1, -327692, 262146, 1, -262156, 262146, 1, -196620, 262146, 1, -131084, 262146, 1, -65548, 262146, 1, -12, 262146, 1, 65524, 262146, 1, 131060, 262146, 1, 196596, 262146, 1, 262132, 262146, 1, 327668, 262146, 1, 393204, 262146, 1, 458740, 262146, 1, -458766, 262146, 1, -393230, 262146, 1, -458765, 262146, 1, -393229, 262146, 1, -458764, 262146, 1, -393228, 262146, 1, -458763, 262146, 1, -393227, 262146, 1, -458762, 131074, 0, -393226, 131074, 0, -524282, 131074, 268435456, -458746, 131074, 268435456, -524281, 262146, 1, -458745, 262146, 1, -524280, 262146, 1, -458744, 262146, 1, -524279, 262146, 1, -458743, 262146, 1, -524278, 262146, 1, -458742, 262146, 1, -524277, 262146, 1, -458741, 262146, 1, -393205, 262146, 1, -327669, 262146, 1, -262133, 262146, 1, -196597, 262146, 1, -131061, 262146, 1, -65525, 262146, 1, 11, 262146, 1, 65547, 262146, 1, 131083, 262146, 1, 196619, 262146, 1, 262155, 262146, 1, 327691, 262146, 1, 393227, 262146, 1, 458763, 262146, 1, 524299, 262146, 1, -524276, 262146, 1, -458740, 262146, 1, -393204, 262146, 1, -327668, 262146, 1, -262132, 262146, 1, -196596, 262146, 1, -131060, 262146, 1, -65524, 262146, 1, 12, 262146, 1, 65548, 262146, 1, 131084, 262146, 1, 196620, 262146, 1, 262156, 262146, 1, 327692, 262146, 1, 393228, 262146, 1, 458764, 262146, 1, 524300, 262146, 1, -524275, 262146, 1, -458739, 262146, 1, -393203, 262146, 1, -327667, 262146, 1, -262131, 262146, 1, -196595, 262146, 1, -131059, 262146, 1, -65523, 262146, 1, 13, 262146, 1, 65549, 262146, 1, 131085, 262146, 1, 196621, 262146, 1, 262157, 262146, 1, 327693, 262146, 1, 393229, 262146, 1, 458765, 262146, 1, 524301, 262146, 1, 655346, 262146, 1, 720882, 262146, 1, 655347, 262146, 1, 720883, 262146, 1, 655348, 262146, 1, 720884, 262146, 1, 655349, 262146, 1, 720885, 262146, 1, 655350, 262146, 1, 720886, 262146, 1, 655351, 262146, 1, 720887, 262146, 1, 655352, 262146, 1, 720888, 262146, 1, 655353, 262146, 1, 720889, 262146, 1, 655354, 262146, 1, 720890, 262146, 1, 655355, 262146, 1, 720891, 262146, 1, 655356, 262146, 1, 720892, 262146, 1, 655357, 262146, 1, 720893, 262146, 1, 655358, 262146, 1, 720894, 262146, 1, 655359, 262146, 1, 720895, 262146, 1, 589824, 262146, 1, 655360, 262146, 1, 589825, 262146, 1, 655361, 262146, 1, 589826, 262146, 1, 655362, 262146, 1, 589827, 262146, 1, 655363, 262146, 1, 589828, 262146, 1, 655364, 262146, 1, 589829, 262146, 1, 655365, 262146, 1, 589830, 262146, 1, 655366, 262146, 1, 589831, 262146, 1, 655367, 262146, 1, 589832, 262146, 1, 655368, 262146, 1, 589833, 262146, 1, 655369, 262146, 1, 589834, 262146, 1, 655370, 262146, 1, 589835, 262146, 1, 655371, 262146, 1, 589836, 262146, 1, 655372, 262146, 1, 589837, 262146, 1, 655373, 262146, 1, 786418, 262146, 1, 786419, 262146, 1, 786420, 262146, 1, 786421, 262146, 1, 786422, 262146, 1, 786423, 262146, 1, 786424, 262146, 1, 786425, 262146, 1, 786426, 262146, 1, 786427, 262146, 1, 786428, 262146, 1, 786429, 262146, 1, 786430, 262146, 1, 786431, 262146, 1, 720896, 262146, 1, 720897, 262146, 1, 720898, 262146, 1, 720899, 262146, 1, 720900, 262146, 1, 720901, 262146, 1, 720902, 262146, 1, 720903, 262146, 1, 720904, 262146, 1, 720905, 262146, 1, 720906, 262146, 1, 720907, 262146, 1, 720908, 262146, 1, 720909, 262146, 1, -458767, 262146, 1, -393231, 262146, 1, -327695, 262146, 1, -262159, 262146, 1, -196623, 262146, 1, -131087, 262146, 1, -65551, 262146, 1, -15, 262146, 1, 65521, 262146, 1, 131057, 262146, 1, 196593, 262146, 1, 262129, 262146, 1, 327665, 262146, 1, 393201, 262146, 1, 458737, 262146, 1, 524273, 262146, 1, 589809, 262146, 1, 655345, 262146, 1, 720881, 262146, 1, 786417, 262146, 1, -524303, 262146, 1, -524302, 262146, 1, -524301, 262146, 1, -524300, 262146, 1, -524299, 262146, 1, -524298, 131074, 0, -589818, 131074, 268435456, -589817, 262146, 1, -589816, 262146, 1, -589815, 262146, 1, -589814, 262146, 1, -589813, 262146, 1, -589812, 262146, 1, -589811, 262146, 1, -589810, 262146, 1, -524274, 262146, 1, -458738, 262146, 1, -393202, 262146, 1, -327666, 262146, 1, -262130, 262146, 1, -196594, 262146, 1, -131058, 262146, 1, -65522, 262146, 1, 14, 262146, 1, 65550, 262146, 1, 131086, 262146, 1, 196622, 262146, 1, 262158, 262146, 1, 327694, 262146, 1, 393230, 262146, 1, 458766, 262146, 1, 524302, 262146, 1, 589838, 262146, 1, 655374, 262146, 1, 720910, 262146, 1, 65542, 196610, 268435456, 65543, 262146, 1, 65544, 262146, 1, 131080, 262146, 1, 196616, 262146, 1, 262152, 262146, 1, -327672, 262146, 1, -262136, 262146, 1, -196600, 262146, 1, -131064, 262146, 1, -65528, 262146, 1, 8, 262146, 1, -327674, 131074, 268435456, -327673, 262146, 1, 393215, 65538, 0, -262137, 262146, 1, -196601, 262146, 1, -131065, 262146, 1, -65529, 262146, 1, 7, 262146, 1, 131079, 262146, 1, 196615, 262146, 1, 262151, 262146, 1, -262138, 131074, 268435456, -196602, 131074, 268435456, -131066, 131074, 268435456, -65530, 131074, 268435456, 6, 131074, 268435456, 131078, 262146, 1, 196614, 262146, 1, 262150, 262146, 1, 131063, 65538, 2, 131064, 65538, 0, 131065, 65538, 0, 131066, 65538, 0, 131067, 65538, 0, 131068, 65538, 0, 131071, 65538, 0, 65536, 65538, 0, 65537, 65538, 0, 65538, 65538, 0, 65539, 65538, 0, 65541, 65538, 0, 131076, 131074, 268435456, 196612, 131074, 268435456, 262148, 131074, 268435456, 131077, 262146, 1, 196613, 262146, 1, 262149, 262146, 1, 393213, 65538, 0, 393214, 196608, 0, 131069, 65538, 0, 65540, 65538, 0)
layer_1/tile_data = PackedInt32Array(196599, 2, 2, 262135, 2, 2, 327671, 2, 2, 131063, 2, 2, 65527, 2, 3)
layer_2/tile_data = PackedInt32Array(-327691, 327682, 1, -262155, 327682, 1, -196619, 327682, 1, -131083, 327682, 1, -65547, 327682, 1, -11, 327682, 1, 65525, 327682, 1, 131061, 327682, 1, 196597, 327682, 1, 262133, 327682, 1, 327669, 327682, 1, 393205, 327682, 1, 458741, 327682, 1, -327690, 327682, 1, -262154, 327682, 1, -196618, 327682, 1, -131082, 327682, 1, -65546, 327682, 1, -10, 327682, 1, 65526, 327682, 1, 131062, 327682, 1, 196598, 327682, 1, 262134, 327682, 1, 327670, 327682, 1, 393206, 327682, 1, 458742, 327682, 1, -327689, 327682, 1, -262153, 327682, 1, -196617, 327682, 1, -131081, 327682, 1, -65545, 327682, 1, -9, 327682, 1, 65527, 327682, 1, 131063, 327682, 1, 196599, 327682, 1, 262135, 327682, 1, 327671, 327682, 1, 393207, 327682, 1, 458743, 327682, 1, -327688, 327682, 1, -262152, 327682, 1, -196616, 327682, 1, -131080, 327682, 1, -65544, 327682, 1, -8, 327682, 1, 65528, 327682, 1, 131064, 327682, 1, 196600, 327682, 1, 262136, 327682, 1, 327672, 327682, 1, 393208, 327682, 1, 458744, 327682, 1, -327687, 327682, 1, -262151, 327682, 1, -196615, 327682, 1, -131079, 327682, 1, -65543, 327682, 1, -7, 327682, 1, 65529, 327682, 1, 131065, 327682, 1, 196601, 327682, 1, 262137, 327682, 1, 327673, 327682, 1, 393209, 327682, 1, 458745, 327682, 1, -327686, 327682, 1, -262150, 327682, 1, -196614, 327682, 1, -131078, 327682, 1, -65542, 327682, 1, -6, 327682, 1, 65530, 327682, 1, 131066, 327682, 1, 196602, 327682, 1, 262138, 327682, 1, 327674, 327682, 1, 393210, 327682, 1, 458746, 327682, 1, -327685, 327682, 1, -262149, 327682, 1, -196613, 327682, 1, -131077, 327682, 1, -65541, 327682, 1, -5, 327682, 1, 65531, 327682, 1, 131067, 327682, 1, 196603, 327682, 1, 262139, 327682, 1, 327675, 327682, 1, 393211, 327682, 1, 458747, 327682, 1, -327684, 327682, 1, -262148, 327682, 1, -196612, 327682, 1, -131076, 327682, 1, -65540, 327682, 1, -4, 327682, 1, 65532, 327682, 1, 131068, 327682, 1, 196604, 327682, 1, 262140, 327682, 1, 327676, 327682, 1, 393212, 327682, 1, 458748, 327682, 1, -327683, 327682, 1, -262147, 327682, 1, -196611, 327682, 1, -131075, 327682, 1, -65539, 327682, 1, -3, 327682, 1, 65533, 327682, 1, 131069, 327682, 1, 196605, 327682, 1, 262141, 327682, 1, 327677, 327682, 1, 393213, 327682, 1, 458749, 327682, 1, -327682, 327682, 1, -262146, 327682, 1, -196610, 327682, 1, -131074, 327682, 1, -65538, 327682, 1, -2, 327682, 1, 65534, 327682, 1, 131070, 327682, 1, 196606, 327682, 1, 262142, 327682, 1, 327678, 327682, 1, 393214, 327682, 1, 458750, 327682, 1, -327681, 327682, 1, -262145, 327682, 1, -196609, 327682, 1, -131073, 327682, 1, -65537, 327682, 1, -1, 327682, 1, 65535, 327682, 1, 131071, 327682, 1, 196607, 327682, 1, 262143, 327682, 1, 327679, 327682, 1, 393215, 327682, 1, 458751, 327682, 1, -393216, 327682, 1, -327680, 327682, 1, -262144, 327682, 1, -196608, 327682, 1, -131072, 327682, 1, -65536, 327682, 1, 0, 327682, 1, 65536, 327682, 1, 131072, 327682, 1, 196608, 327682, 1, 262144, 327682, 1, 327680, 327682, 1, 393216, 327682, 1, -393215, 327682, 1, -327679, 327682, 1, -262143, 327682, 1, -196607, 327682, 1, -131071, 327682, 1, -65535, 327682, 1, 1, 327682, 1, 65537, 327682, 1, 131073, 327682, 1, 196609, 327682, 1, 262145, 327682, 1, 327681, 327682, 1, 393217, 327682, 1, -393214, 327682, 1, -327678, 327682, 1, -262142, 327682, 1, -196606, 327682, 1, -131070, 327682, 1, -65534, 327682, 1, 2, 327682, 1, 65538, 327682, 1, 131074, 327682, 1, 196610, 327682, 1, 262146, 327682, 1, 327682, 327682, 1, 393218, 327682, 1, -393213, 327682, 1, -327677, 327682, 1, -262141, 327682, 1, -196605, 327682, 1, -131069, 327682, 1, -65533, 327682, 1, 3, 327682, 1, 65539, 327682, 1, 131075, 327682, 1, 196611, 327682, 1, 262147, 327682, 1, 327683, 327682, 1, 393219, 327682, 1, -393212, 327682, 1, -327676, 327682, 1, -262140, 327682, 1, -196604, 327682, 1, -131068, 327682, 1, -65532, 327682, 1, 4, 327682, 1, 65540, 327682, 1, 131076, 327682, 1, 196612, 327682, 1, 262148, 327682, 1, 327684, 327682, 1, 393220, 327682, 1, -393211, 327682, 1, -327675, 327682, 1, -262139, 327682, 1, -196603, 327682, 1, -131067, 327682, 1, -65531, 327682, 1, 5, 327682, 1, 65541, 327682, 1, 131077, 327682, 1, 196613, 327682, 1, 262149, 327682, 1, 327685, 327682, 1, 393221, 327682, 1, -393210, 327682, 1, -327674, 327682, 1, -262138, 327682, 1, -196602, 327682, 1, -131066, 327682, 1, -65530, 327682, 1, 6, 327682, 1, 65542, 327682, 1, 131078, 327682, 1, 196614, 327682, 1, 262150, 327682, 1, 327686, 327682, 1, 393222, 327682, 1, -393209, 327682, 1, -327673, 327682, 1, -262137, 327682, 1, -196601, 327682, 1, -131065, 327682, 1, -65529, 327682, 1, 7, 327682, 1, 65543, 327682, 1, 131079, 327682, 1, 196615, 327682, 1, 262151, 327682, 1, 327687, 327682, 1, 393223, 327682, 1, -393208, 327682, 1, -327672, 327682, 1, -262136, 327682, 1, -196600, 327682, 1, -131064, 327682, 1, -65528, 327682, 1, 8, 327682, 1, 65544, 327682, 1, 131080, 327682, 1, 196616, 327682, 1, 262152, 327682, 1, 327688, 327682, 1, 393224, 327682, 1, -393207, 327682, 1, -327671, 327682, 1, -262135, 327682, 1, -196599, 327682, 1, -131063, 327682, 1, -65527, 327682, 1, 9, 327682, 1, 65545, 327682, 1, 131081, 327682, 1, 196617, 327682, 1, 262153, 327682, 1, 327689, 327682, 1, 393225, 327682, 1, -393206, 327682, 1, -327670, 327682, 1, -262134, 327682, 1, -196598, 327682, 1, -131062, 327682, 1, -65526, 327682, 1, 10, 327682, 1, 65546, 327682, 1, 131082, 327682, 1, 196618, 327682, 1, 262154, 327682, 1, 327690, 327682, 1, 393226, 327682, 1, -524295, 327682, 1, -458759, 327682, 1, -393223, 327682, 1, -524294, 327682, 1, -458758, 327682, 1, -393222, 327682, 1, -524293, 327682, 1, -458757, 327682, 1, -393221, 327682, 1, -524292, 327682, 1, -458756, 327682, 1, -393220, 327682, 1, -524291, 327682, 1, -458755, 327682, 1, -393219, 327682, 1, -524290, 327682, 1, -458754, 327682, 1, -393218, 327682, 1, -524289, 327682, 1, -458753, 327682, 1, -393217, 327682, 1, -589824, 327682, 1, -524288, 327682, 1, -458752, 327682, 1, -589823, 327682, 1, -524287, 327682, 1, -458751, 327682, 1, -524299, 327682, 1, -458763, 327682, 1, -393227, 327682, 1, -524298, 327682, 1, -458762, 327682, 1, -393226, 327682, 1, -524297, 327682, 1, -458761, 327682, 1, -393225, 327682, 1, -524296, 327682, 1, -458760, 327682, 1, -393224, 327682, 1, -589822, 327682, 1, -524286, 327682, 1, -458750, 327682, 1, -589821, 327682, 1, -524285, 327682, 1, -458749, 327682, 1, -589820, 327682, 1, -524284, 327682, 1, -458748, 327682, 1, -589819, 327682, 1, -524283, 327682, 1, -458747, 327682, 1, -589818, 327682, 1, -524282, 327682, 1, -458746, 327682, 1, -589817, 327682, 1, -524281, 327682, 1, -458745, 327682, 1, -589816, 327682, 1, -524280, 327682, 1, -458744, 327682, 1, -589815, 327682, 1, -524279, 327682, 1, -458743, 327682, 1, -589814, 327682, 1, -524278, 327682, 1, -458742, 327682, 1)

[node name="Box" parent="." instance=ExtResource("3_7ehay")]
position = Vector2(-192, 0)
box_type_index = 5

[node name="Box2" parent="." instance=ExtResource("3_7ehay")]
box_type_index = 5

[node name="SelectedSpace" type="Sprite2D" parent="."]
z_index = 2
texture = ExtResource("5_0qfvy")
centered = false
hframes = 4
frame = 1

[node name="SelectedSpaceArea" type="Area2D" parent="SelectedSpace"]
position = Vector2(16, 16)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape2D" parent="SelectedSpace/SelectedSpaceArea"]
shape = SubResource("RectangleShape2D_hw10c")

[node name="Exit" parent="." instance=ExtResource("6_6vmr4")]
position = Vector2(128, 0)

[node name="WandPickUp" parent="." instance=ExtResource("7_m8xqm")]
position = Vector2(73.02, 157.45)

[node name="WandSprite" parent="WandPickUp" index="0"]
rotation = 1.39626

[node name="WandArea" parent="WandPickUp" index="1"]
collision_layer = 0
collision_mask = 2

[connection signal="body_entered" from="SelectedSpace/SelectedSpaceArea" to="." method="_on_selected_space_area_body_entered"]
[connection signal="body_exited" from="SelectedSpace/SelectedSpaceArea" to="." method="_on_selected_space_area_body_exited"]
[connection signal="body_entered" from="Exit/ExitArea" to="." method="_on_exit_area_body_entered"]

[editable path="Exit"]
[editable path="WandPickUp"]
